@@ -1157,8 +1157,8 @@ QNetworkProxy QWebPage::networkProxy() const
 }
 #endif
 
-QString QWebPage::userAgentStringForUrl(const QUrl& forUrl) const {
-    Q_UNUSED(forUrl)
+QString QWebPage::userAgentFor(const QUrl& url) const {
+    Q_UNUSED(url)
     return QLatin1String("Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en) AppleWebKit/418.9.1 (KHTML, like Gecko) Safari/419.3 Qt");
 }
 
