@@ -553,7 +553,7 @@ void FrameLoaderClientQt::setTitle(const String&, const KURL&)
 String FrameLoaderClientQt::userAgent(const KURL& url)
 {
     if (m_webFrame) {
-        return m_webFrame->page()->userAgentStringForUrl(QUrl((QString)url.url()));
+        return m_webFrame->page()->userAgentFor(QUrl((QString)url.url()));
     }
     return String();
 }
